--- a/Simulation.Lab.8.csproj
+++ b/Simulation.Lab.8.csproj
@@ -52,10 +52,28 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="lab_8_1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lab_8_1.Designer.cs">
+      <DependentUpon>lab_8_1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="lab_8_2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lab_8_2.Designer.cs">
+      <DependentUpon>lab_8_2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="lab_8_1.resx">
+      <DependentUpon>lab_8_1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="lab_8_2.resx">
+      <DependentUpon>lab_8_2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
