--- a/Simulation.Lab.8.csproj
+++ b/Simulation.Lab.8.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,6 +65,12 @@
     <Compile Include="lab_8_2.Designer.cs">
       <DependentUpon>lab_8_2.cs</DependentUpon>
     </Compile>
+    <Compile Include="lab_8_3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="lab_8_3.Designer.cs">
+      <DependentUpon>lab_8_3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -74,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="lab_8_2.resx">
       <DependentUpon>lab_8_2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="lab_8_3.resx">
+      <DependentUpon>lab_8_3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
